public class Coin implements Collectable{

    Coin(){
        //todo constructor
    }

    public void get_collected(Hero hero){
        //todo
    }


}
