public interface Collectable {

    public void get_collected(Hero hero);


}
