public interface Collidable {

    public void collide(Collidable other);

}
