public class FlyingWeapon extends Weapon implements Collidable{

    private Weapon category;

    FlyingWeapon(Weapon cat){
        //todo
    }

    @Override
    public void collide(Collidable other) {
        //todo
    }
}
