public class WeaponChest extends Chest{

    private Weapon weapon;


    @Override
    public void collect_chest(Hero hero) {
        //todo
    }
}
